JAVA_07 ex01 in progress

--- a/JAVA_07/ex01/my-app/form/pom.xml
+++ b/JAVA_07/ex01/my-app/form/pom.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>my-app</artifactId>
+    <groupId>edu.Roma42</groupId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
 
-  <groupId>edu.Roma42.app</groupId>
-  <artifactId>Annotations</artifactId>
-  <version>1.0</version>
+  <groupId>edu.Roma42.form</groupId>
+  <artifactId>form</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-  <url>http://www.example.com</url>
+  <name>form</name>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	<auto-service.version>1.0-rc5</auto-service.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
@@ -25,11 +27,14 @@
       <scope>test</scope>
     </dependency>
 	<dependency>
-      <groupId>com.google.auto.service</groupId>
-      <artifactId>auto-service</artifactId>
-      <version>1.0-rc5</version>
-      <optional>true</optional>
-	  <scope>provided</scope>
+	  <groupId>edu.Roma42.processor</groupId>
+	  <artifactId>processor</artifactId>
+	  <version>1.0-SNAPSHOT</version>
+	</dependency>
+	<dependency>
+	  <groupId>edu.Roma42.annotations</groupId>
+	  <artifactId>annotations</artifactId>
+	  <version>1.0-SNAPSHOT</version>
 	</dependency>
   </dependencies>
 
@@ -49,14 +54,6 @@
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
-		  <configuration>
-			<!-- compilerArgs>
-				<arg>-XprintProcessorInfo</arg>
-				<arg>-XprintRounds</arg>
-			</compilerArgs -->
-			<source>1.8</source>
-			<target>1.8</target>
-		  </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
